# findex

./: .gitignore  CUSTOMIZATION.md  Cargo.toml  INSTALLATION.md  PLUGINS.md  README.md  findex-restarter.path  findex-restarter.service  findex.service  findex_toggle  installer.sh
.github/ISSUE_TEMPLATE/: bug_report.md
crates/findex/: Cargo.toml
crates/findex-daemon/: Cargo.toml
crates/findex-daemon/src/: main.rs
crates/findex-plugin/: Cargo.toml  README.md
crates/findex-plugin/src/: findex_internal.rs  lib.rs
crates/findex/src/: app_list.rs  config.rs  main.rs
crates/findex/src/app_list/: mod.rs
crates/findex/src/gui/: css.rs  mod.rs  result_list.rs  result_list_row.rs  searchbox.rs
css/: style.css
plugins/: README.md
plugins/cmd/: Cargo.toml
plugins/cmd/src/: lib.rs
plugins/github-repo/: Cargo.toml
plugins/github-repo/src/: lib.rs
plugins/urlopen/: Cargo.toml
plugins/urlopen/src/: lib.rs
src/: common.rs  config.rs  css.rs  daemon.rs  gui.rs  lib.rs  main.rs  query.rs  search_result.rs  window.rs
src/app_list/: mod.rs
src/daemon/: config.rs  db.rs  init.rs
src/daemon/backend/: custom_backend.rs  default_backend.rs  mod.rs
src/daemon/paths/: mod.rs
src/daemon/paths/config/: mod.rs
src/daemon/paths/gui/: mod.rs
src/daemon/paths/query/: mod.rs
src/gui/: common.rs  config.rs  css.rs  dbus.rs  dialog.rs  mod.rs  query.rs  result_list.rs  result_list_row.rs  search_result.rs  searchbox.rs
