[package]
name = "findex"
version = "0.6.0"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]
description = "Highly customizable application finder with high performance. Written in Rust and uses GTK"
homepage = "https://github.com/mdgaziur/findex"
repository = "https://github.com/mdgaziur/findex"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
gtk = { version = "0.15.1", features = ["v3_22"] }
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
daemonize = "0.4.1"
lazy_static = "1.4.0"
serde = { version = "1.0.132", features = ["derive"] }
toml = "0.5.8"
shellexpand = "2.1.0"
native-dialog = "0.6.1"
libloading = "0.7"
fuse-rust = "0.3.0"
inotify = "0.10.0"
freedesktop_entry_parser = "1.2.0"
regex = "1.5.4"
dyn-clone = "1.0.4"
nix = "0.23.1"
shlex = "1.1.0"

[dependencies.rustbreak]
git = "https://github.com/mdgaziur/rustbreak"
version = "2"
features = ["bin_enc"]