[package]
name = "findex"
version = "0.6.0"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]
description = "Highly customizable application finder with high performance. Written in Rust and uses GTK"
homepage = "https://github.com/mdgaziur/findex"
repository = "https://github.com/mdgaziur/findex"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = true

[dependencies]
gtk = { version = "0.15.1", features = ["v3_22"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
toml = "0.5"
libc = "0.2"
keybinder = "0.1.0"
shellexpand = "2.1.0"
parking_lot = "0.12.1"
