[package]
name = "findex-daemon"
version = "0.7.2"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.1", features = ["time"] }
daemonize = "0.4.1"
shellexpand = "3.0.0"
inotify = "0.10.0"
subprocess = "0.2.9"
