[package]
name = "findex-plugin"
description = "Plugins library for Findex"
license = "GPL-3.0"
homepage = "https://github.com/mdgaziur/findex"
repository = "https://github.com/mdgaziur/findex"
documentation = "https://github.com/mdgaziur/findex/blob/development/crates/findex-plugin/README.md"
version = "0.7.2"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
findex_internals = ["dep:libloading"]

[dependencies]
libloading = { version = "0.7.4", optional = true }
abi_stable = "0.11.1"
