[package]
name = "findex"
version = "0.8.0"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]
description = "Highly customizable application finder with high performance. Written in Rust and uses GTK"
homepage = "https://github.com/mdgaziur/findex"
repository = "https://github.com/mdgaziur/findex"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.1", features = ["v3_22"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
toml = "0.5"
libc = "0.2"
shellexpand = "2.1.0"
sublime_fuzzy = "0.7.0"
xdg = "2.4.1"
inotify = "0.10.0"
parking_lot = "0.12.1"
regex = "1.6.0"
keybinder = { version = "0.4.0" }
findex-plugin = { path = "../findex-plugin", features = ["findex_internals"] }
abi_stable = "0.11.1"
shlex = "1.1.0"
